[package]
name = "nutshell"
version = "0.1.1"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "Image manager of Project Polya"
keywords = ["project-polya", "squashfs", "image", "systemd-nspawn", "archlinux"]
categories = ["filesystem", "compression"]
homepage = "https://github.com/project-polya"
repository = "https://github.com/project-polya/nutshell"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = {  version = "0.10", features = ["blocking"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"